cmake_minimum_required(VERSION 2.8)
project( Lab01 )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( /Users/kangqi/Desktop/ChartDirector/lib )
include_directories( /Users/kangqi/Desktop/ChartDirector/include )
add_executable( Lab01 Lab01.cpp )
target_link_libraries( Lab01 ${OpenCV_LIBS} )
target_link_libraries( Lab01 /Users/kangqi/Desktop/ChartDirector/lib/libchartdir.dylib)
target_link_libraries( Lab01 /Users/kangqi/Desktop/ChartDirector/lib/libchartdir.6.dylib)